# grackle

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md  config.toml.example
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: aur-publish.yml  check.yml  ci.yml  dependency-update.yml  release.yml
aur/: README.md
aur/grackle-bin/: PKGBUILD.template
src/: app.rs  cli.rs  config.rs  continuous.rs  ipc.rs  lib.rs  signals.rs  transcript_events.rs
src/refine/: genai_refiner.rs  mod.rs
src/transcription/: mod.rs  nemotron_streaming.rs  parakeet.rs  parakeet_streaming.rs
