[package]
name = "grackle"
version = "0.4.0"
edition = "2021"
description = "Live speech-to-text for Wayland: a daemon with on-demand and continuous transcription, controlled over a Unix socket"
license = "GPL-3.0-or-later"
authors = [
    "Ravi Nagabhyru <ravi.nagabhyru@gmail.com>",
    "Artur Roszczyk <artur.roszczyk@gmail.com> (original waystt author)",
]
repository = "https://github.com/ravinagabhyru/grackle"
homepage = "https://github.com/ravinagabhyru/grackle"
readme = "README.md"
keywords = ["wayland", "speech-to-text", "transcription", "voice", "pipewire"]
categories = ["command-line-utilities", "multimedia::audio"]

[dependencies]
# Core dependencies (essential)
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
reqwest = { version = "0.12", features = ["multipart", "stream", "json"] }
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
eframe = "0.31"

# Audio capture
cpal = "0.15"

# Local transcription
whisper-rs = "0.15"
hound = "3.5"

# Parakeet local transcription (optional NVIDIA Parakeet models via ONNX)
parakeet-rs = { version = "0.3.5", optional = true, default-features = false, features = ["cpu", "ort-defaults"] }

# Unified LLM client for optional post-transcription text refinement
genai = { version = "0.5", optional = true }


# JSON parsing for API responses
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }


# Async trait support
async-trait = "0.1"


# Google Cloud Speech-to-Text (REST via reqwest; OAuth2 tokens via yup-oauth2)
yup-oauth2 = "11.0"


[dev-dependencies]
tempfile = "3.0"
mockito = "1.0"
tokio-test = "0.4"


[[bin]]
name = "grackle"
path = "src/bin/grackle.rs"

[[bin]]
name = "grackctl"
path = "src/bin/grackctl.rs"

[[bin]]
name = "grackle-ui"
path = "src/bin/grackle_ui.rs"

[features]
default = ["parakeet", "llm-refine"]
parakeet = ["parakeet-rs"]
parakeet-cuda = ["parakeet", "parakeet-rs/cuda"]
llm-refine = ["dep:genai"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
